<resources>
    <string name="app_name">OPCV</string>
    <string name="Diccionary">Diccionario</string>
    <string name="Map">Huertas</string>
    <string name="Gardens">Huerta</string>
    <string name="User">Perfil</string>
    <string name="CreateProfile">Crea tu cuenta</string>
    <string name="question1">¿Ya tienes una cuenta?</string>
    <string name="question2">Entrar como invitado</string>
    <string name="login_text1">Inicia sesión</string>
    <string name="login_text2">Ingresa</string>
    <string name="GardenAvTittle">Huertas Activas Disponibles</string>
    <string name="gardenName">Nombre Huerta</string>
    <string name="privateL">Privado</string>
    <string name="publicL">Público</string>
    <string name="add">Agregar</string>
    <string name="gardenInfo">Información de la Huerta</string>
...
    <string name="m_s_tarde2">Más tarde</string>
    <string name="hola_bienvenido_a_a_ceres2">Hola, bienvenido(a) a Ceres</string>
    <string name="finalizar_registro">Finalizar Registro</string>
    <string name="c_mara">Cámara</string>
    <string name="seleccionar_foto">Seleccionar Foto</string>
    <string name="dicccionarios">Diccionarios</string>
    <string name="plantas">Plantas</string>
    <string name="herramientas">Herramientas</string>
    <string name="plantas2">Plantas</string>
    <string name="diccionario">Diccionario</string>
    <string name="nombre5">Nombre</string>
    <string name="description23">Description</string>
    <string name="carater_sticas">Caraterísticas:</string>
...
    <string name="a_n_no_tienes_una_cuenta">¿Aún no tienes una cuenta?</string>
    <string name="reg_strate">REGÍSTRATE</string>
    <string name="he_leido_los">He leido los</string>
    <string name="t_rminos_y_condiciones2">Términos y Condiciones</string>
    <string name="al_crear_una_cuenta_aceptas_los">Al crear una cuenta aceptas los</string>
    <string name="debes_subir_nivel">Para poder ingresar una imagen a tu huerta debes primero subir a nivel 2.</string>
    <string name="bonos">Bonos</string>
    <string name="recompensas">Recompensas</string>
    <string name="passwordChange">Cambiar contraseña</string>
    <string name="newPassword">Ingrese la nueva contraseña</string>
    <string name="seg_n_el_nivel_que_tienes_actualmente_a_continuaci_n_est_n_tus_recompensas_disponibles">Según el nivel que tienes actualmente, a continuación están tus recompensas disponibles.</string>
    <string name="calendario_lunar">Calendario Lunar</string>
    <string name="gu_as_b_sicas_y_consejos">Guías básicas y consejos</string>
...
    <string name="agrega_la_foto_de_tu_huerta">¡Agrega la foto de tu huerta!</string>
    <string name="al_ser_nivel_2_ya_puedes_agregar_una_foto_de_tu_huerta_n_n_con_esto_podr_s_perzonalizar_la_descripci_n_de_tu_huerta_y_ser_m_s_llamativa_para_otras_personas">Al ser nivel 2 ya puedes agregar una foto de tu huerta. \n\n Con esto podrás perzonalizar la descripción de tu huerta y ser más llamativa para otras personas.</string>
    <string name="ShowGuidesText">A continuación, se muestran las guías que corresponden al nivel desbloqueado. </string>
    <string name="DisplayPDF">A continuación, podrás visualizar la guía que seleccionaste o podrás descargarla en tu dispositivo.</string>
    <string name="registrarse_como_invitado">Registrarse como invitado</string>
    <string name="ingresa_tu_nombre_de_invitado">Ingresa tu nombre de invitado</string>
    <string name="ingresar">Ingresar</string>
    <string name="textview">TextView</string>
    <string name="ShowPlantsDiseases">A continuación, se muestran las información de enfermedades más comunes de estas plantas y sus posibles soluciones. </string>

    <!--Textos estaticos para el nivel de plantas y sus enfermedades-->
    <!--Lechuga-->
    <string name="TextLettuce">La lechuga es uno de los cultivos más importantes pero a la vez es de los más azotados por distintos insectos, hongos y bacterias que deterioras y alteran las hojas de esta hortaliza. A continuación estan los problemas más comúnes:</string>
...
