...
                        android:fontFamily="@font/manroperegular" />


                </LinearLayout>

                <Button
                    android:id="@+id/guestLoginButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_40sdp"
                    android:layout_marginEnd="@dimen/_40sdp"
                    android:background="@drawable/dr_green_button"
                    android:layout_marginBottom="@dimen/_20sdp"
...
