...
                            android:text="@string/question2"
                            android:fontFamily="@font/manroperegular"
                            android:textColor="@color/gray"
                            android:textSize="@dimen/_12sdp" />

                        <TextView
                            android:id="@+id/guestLogin"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/login_text2"
                            android:fontFamily="@font/manropemedium"
                            android:textAllCaps="true"
                            android:textColor="@color/green"
...
